2007-11-10  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: (gconf_handle_dbus_exception),
	(gconf_engine_all_entries), (gconf_engine_all_dirs),
	(gconf_engine_suggest_sync), (gconf_engine_dir_exists): Plug
	leaks (also do some s/bool/pointer/ in g_return_val_if_fail
	macros).

2007-06-27  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c: (database_message_func),
	(database_handle_suggest_sync):
	* gconf/gconf-dbus.c: (gconf_engine_suggest_sync): Implement
	suggest_sync.

2007-06-27  Richard Hult  <richard@imendio.com>

	* backends/Makefile.am: Patch from Ronald Bultje to fix
	portability.

2007-06-27  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c (database_handle_set_schema): Empty
	schema name means unset.

2007-05-24  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c: (database_handle_get_all_dirs):
	* gconf/gconf-dbus.c: (gconf_engine_all_dirs): Use an array for
	directories as well, to avoid hitting the max size for message
	headers if there are many dirs (hundreds at the same level).

2007-05-22  Richard Hult  <richard@imendio.com>

	* dbus-tests/test-getting-and-setting.sh:
	* dbus-tests/test-schema-bug.c: (main):
	* dbus-tests/test-schemas.schemas: Use different keys for the
	different tests so they don't interfere with each other.
	
	* gconf/gconf-database-dbus.c:
	(database_handle_name_owner_changed),
	(gconf_database_dbus_teardown): Remove obsolete comments.
	(gconf_database_dbus_notify_listeners): Notify other listeners.
	
	* gconf/gconf-dbus.c: (gconf_engine_is_local):
	* gconf/gconfd-dbus.c: (gconfd_dbus_get_connection): Remove
	obsolete comments.

2007-05-21  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus-utils.c: (utils_append_value_helper_pair),
	(utils_append_value), (utils_append_entry_values),
	(utils_get_value_helper_fundamental),
	(utils_get_value_helper_pair): Handle empty pairs.

2007-05-15  Richard Hult  <richard@imendio.com>
