@@ -1,3 +1,9 @@
+2007-12-11  Richard Hult  <richard@imendio.com>
+
+	* gconf/gconf-dbus.c: (ensure_dbus_connection),
+	(gconf_dbus_message_filter): Warn instead of exit when we get
+	disconnected from the bus.
+
 2007-11-10  Richard Hult  <richard@imendio.com>
 
 	* gconf/gconf-dbus.c: (gconf_handle_dbus_exception),
